y.output
   0  $accept : list $end

   1  list :
   2       | list '\n'
   3       | list asgn '\n'
   4       | list stmt '\n'
   5       | list exp '\n'
   6       | list asigncoord '\n'
   7       | list expcoord '\n'

   8  asgn : VAR '=' exp

   9  stmt : exp
  10       | PRINT exp
  11       | asigncoord
  12       | expcoord
  13       | while cond stmt end
  14       | if cond stmt end
  15       | if cond stmt end ELSE stmt end
  16       | for '(' inicio ';' cond ';' inc ')' stmt end
  17       | '{' stmtlist '}'

  18  cond : '(' exp ')'

  19  while : WHILE

  20  if : IF

  21  for : FOR

  22  inicio : exp

  23  inc : exp

  24  end :

  25  stmtlist :
  26           | stmtlist '\n'
  27           | stmtlist stmt

  28  exp : NUMBER
  29      | VAR
  30      | asgn
  31      | BLTIN '(' exp ')'
  32      | exp '+' exp
  33      | exp '-' exp
  34      | exp '*' exp
  35      | exp '/' exp
  36      | exp '^' exp
  37      | '(' exp ')'
  38      | exp EQ exp
  39      | exp NEQ exp
  40      | exp GT exp
  41      | exp GE exp
  42      | exp LT exp
  43      | exp LE exp

  44  asigncoord : VARCRD '=' binstr

  45  binstr : binstr instr
  46         | 'c'
  47         | expcoord

  48  expcoord : expcoord '+' expcoord
  49           | expcoord '-' expcoord
  50           | sec

  51  sec : 'c'
  52      | sec instr
  53      | VARCRD

  54  instr : 'e'
  55        | 'n'
  56        | 'o'
  57        | 's'
  58        | 'u'
  59        | 'd'
  60        | '&'
  61        | '%'
  62        | '#'
  63        | '"'

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . '\n'  (2)
	list : list . asgn '\n'  (3)
	list : list . stmt '\n'  (4)
	list : list . exp '\n'  (5)
	list : list . asigncoord '\n'  (6)
	list : list . expcoord '\n'  (7)

	$end  accept
	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	NUMBER  shift 7
	'c'  shift 8
	VAR  shift 9
	VARCRD  shift 10
	'\n'  shift 11
	'('  shift 12
	'{'  shift 13
	.  error

	asgn  goto 14
	stmt  goto 15
	exp  goto 16
	asigncoord  goto 17
	expcoord  goto 18
	while  goto 19
	if  goto 20
	for  goto 21
	sec  goto 22


state 2
	exp : BLTIN . '(' exp ')'  (31)

	'('  shift 23
	.  error


state 3
	if : IF .  (20)

	.  reduce 20


state 4
	while : WHILE .  (19)

	.  reduce 19


state 5
	for : FOR .  (21)

	.  reduce 21


state 6
	stmt : PRINT . exp  (10)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 25


state 7
	exp : NUMBER .  (28)

	.  reduce 28


state 8
	sec : 'c' .  (51)

	.  reduce 51


state 9
	asgn : VAR . '=' exp  (8)
	exp : VAR .  (29)

	'='  shift 26
	BLTIN  reduce 29
	IF  reduce 29
	ELSE  reduce 29
	WHILE  reduce 29
	FOR  reduce 29
	PRINT  reduce 29
	EQ  reduce 29
	NEQ  reduce 29
	GT  reduce 29
	GE  reduce 29
	LT  reduce 29
	LE  reduce 29
	NUMBER  reduce 29
	'c'  reduce 29
	VAR  reduce 29
	VARCRD  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	'*'  reduce 29
	'/'  reduce 29
	'^'  reduce 29
	'\n'  reduce 29
	'('  reduce 29
	';'  reduce 29
	')'  reduce 29
	'{'  reduce 29
	'}'  reduce 29


state 10
	asigncoord : VARCRD . '=' binstr  (44)
	sec : VARCRD .  (53)

	'='  shift 27
	BLTIN  reduce 53
	IF  reduce 53
	ELSE  reduce 53
	WHILE  reduce 53
	FOR  reduce 53
	PRINT  reduce 53
	NUMBER  reduce 53
	'c'  reduce 53
	VAR  reduce 53
	VARCRD  reduce 53
	'-'  reduce 53
	'+'  reduce 53
	'\n'  reduce 53
	'('  reduce 53
	'{'  reduce 53
	'}'  reduce 53
	'e'  reduce 53
	'n'  reduce 53
	'o'  reduce 53
	's'  reduce 53
	'u'  reduce 53
	'd'  reduce 53
	'&'  reduce 53
	'%'  reduce 53
	'#'  reduce 53
	'"'  reduce 53


state 11
	list : list '\n' .  (2)

	.  reduce 2


state 12
	exp : '(' . exp ')'  (37)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 28


state 13
	stmt : '{' . stmtlist '}'  (17)
	stmtlist : .  (25)

	.  reduce 25

	stmtlist  goto 29


14: shift/reduce conflict (shift 30, reduce 30) on '\n'
state 14
	list : list asgn . '\n'  (3)
	exp : asgn .  (30)

	'\n'  shift 30
	EQ  reduce 30
	NEQ  reduce 30
	GT  reduce 30
	GE  reduce 30
	LT  reduce 30
	LE  reduce 30
	'-'  reduce 30
	'+'  reduce 30
	'*'  reduce 30
	'/'  reduce 30
	'^'  reduce 30


state 15
	list : list stmt . '\n'  (4)

	'\n'  shift 31
	.  error


16: shift/reduce conflict (shift 43, reduce 9) on '\n'
state 16
	list : list exp . '\n'  (5)
	stmt : exp .  (9)
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	'\n'  shift 43


17: shift/reduce conflict (shift 44, reduce 11) on '\n'
state 17
	list : list asigncoord . '\n'  (6)
	stmt : asigncoord .  (11)

	'\n'  shift 44


18: shift/reduce conflict (shift 47, reduce 12) on '\n'
state 18
	list : list expcoord . '\n'  (7)
	stmt : expcoord .  (12)
	expcoord : expcoord . '+' expcoord  (48)
	expcoord : expcoord . '-' expcoord  (49)

	'-'  shift 45
	'+'  shift 46
	'\n'  shift 47


state 19
	stmt : while . cond stmt end  (13)

	'('  shift 48
	.  error

	cond  goto 49


state 20
	stmt : if . cond stmt end  (14)
	stmt : if . cond stmt end ELSE stmt end  (15)

	'('  shift 48
	.  error

	cond  goto 50


state 21
	stmt : for . '(' inicio ';' cond ';' inc ')' stmt end  (16)

	'('  shift 51
	.  error


22: shift/reduce conflict (shift 52, reduce 50) on 'e'
22: shift/reduce conflict (shift 53, reduce 50) on 'n'
22: shift/reduce conflict (shift 54, reduce 50) on 'o'
22: shift/reduce conflict (shift 55, reduce 50) on 's'
22: shift/reduce conflict (shift 56, reduce 50) on 'u'
22: shift/reduce conflict (shift 57, reduce 50) on 'd'
22: shift/reduce conflict (shift 58, reduce 50) on '&'
22: shift/reduce conflict (shift 59, reduce 50) on '%'
22: shift/reduce conflict (shift 60, reduce 50) on '#'
22: shift/reduce conflict (shift 61, reduce 50) on '"'
state 22
	expcoord : sec .  (50)
	sec : sec . instr  (52)

	'e'  shift 52
	'n'  shift 53
	'o'  shift 54
	's'  shift 55
	'u'  shift 56
	'd'  shift 57
	'&'  shift 58
	'%'  shift 59
	'#'  shift 60
	'"'  shift 61
	BLTIN  reduce 50
	IF  reduce 50
	ELSE  reduce 50
	WHILE  reduce 50
	FOR  reduce 50
	PRINT  reduce 50
	NUMBER  reduce 50
	'c'  reduce 50
	VAR  reduce 50
	VARCRD  reduce 50
	'-'  reduce 50
	'+'  reduce 50
	'\n'  reduce 50
	'('  reduce 50
	'{'  reduce 50
	'}'  reduce 50

	instr  goto 62


state 23
	exp : BLTIN '(' . exp ')'  (31)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 63


state 24
	exp : asgn .  (30)

	.  reduce 30


state 25
	stmt : PRINT exp .  (10)
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	BLTIN  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	WHILE  reduce 10
	FOR  reduce 10
	PRINT  reduce 10
	NUMBER  reduce 10
	'c'  reduce 10
	VAR  reduce 10
	VARCRD  reduce 10
	'\n'  reduce 10
	'('  reduce 10
	'{'  reduce 10
	'}'  reduce 10


state 26
	asgn : VAR '=' . exp  (8)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 64


state 27
	asigncoord : VARCRD '=' . binstr  (44)

	'c'  shift 65
	VARCRD  shift 66
	.  error

	expcoord  goto 67
	binstr  goto 68
	sec  goto 22


state 28
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : '(' exp . ')'  (37)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	')'  shift 69
	.  error


state 29
	stmt : '{' stmtlist . '}'  (17)
	stmtlist : stmtlist . '\n'  (26)
	stmtlist : stmtlist . stmt  (27)

	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	NUMBER  shift 7
	'c'  shift 8
	VAR  shift 9
	VARCRD  shift 10
	'\n'  shift 70
	'('  shift 12
	'{'  shift 13
	'}'  shift 71
	.  error

	asgn  goto 24
	stmt  goto 72
	exp  goto 73
	asigncoord  goto 74
	expcoord  goto 75
	while  goto 19
	if  goto 20
	for  goto 21
	sec  goto 22


state 30
	list : list asgn '\n' .  (3)

	.  reduce 3


state 31
	list : list stmt '\n' .  (4)

	.  reduce 4


state 32
	exp : exp EQ . exp  (38)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 76


state 33
	exp : exp NEQ . exp  (39)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 77


state 34
	exp : exp GT . exp  (40)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 78


state 35
	exp : exp GE . exp  (41)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 79


state 36
	exp : exp LT . exp  (42)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 80


state 37
	exp : exp LE . exp  (43)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 81


state 38
	exp : exp '-' . exp  (33)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 82


state 39
	exp : exp '+' . exp  (32)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 83


state 40
	exp : exp '*' . exp  (34)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 84


state 41
	exp : exp '/' . exp  (35)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 85


state 42
	exp : exp '^' . exp  (36)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 86


state 43
	list : list exp '\n' .  (5)

	.  reduce 5


state 44
	list : list asigncoord '\n' .  (6)

	.  reduce 6


state 45
	expcoord : expcoord '-' . expcoord  (49)

	'c'  shift 8
	VARCRD  shift 66
	.  error

	expcoord  goto 87
	sec  goto 22


state 46
	expcoord : expcoord '+' . expcoord  (48)

	'c'  shift 8
	VARCRD  shift 66
	.  error

	expcoord  goto 88
	sec  goto 22


state 47
	list : list expcoord '\n' .  (7)

	.  reduce 7


state 48
	cond : '(' . exp ')'  (18)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 89


state 49
	stmt : while cond . stmt end  (13)

	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	NUMBER  shift 7
	'c'  shift 8
	VAR  shift 9
	VARCRD  shift 10
	'('  shift 12
	'{'  shift 13
	.  error

	asgn  goto 24
	stmt  goto 90
	exp  goto 73
	asigncoord  goto 74
	expcoord  goto 75
	while  goto 19
	if  goto 20
	for  goto 21
	sec  goto 22


state 50
	stmt : if cond . stmt end  (14)
	stmt : if cond . stmt end ELSE stmt end  (15)

	BLTIN  shift 2
	IF  shift 3
	WHILE  shift 4
	FOR  shift 5
	PRINT  shift 6
	NUMBER  shift 7
	'c'  shift 8
	VAR  shift 9
	VARCRD  shift 10
	'('  shift 12
	'{'  shift 13
	.  error

	asgn  goto 24
	stmt  goto 91
	exp  goto 73
	asigncoord  goto 74
	expcoord  goto 75
	while  goto 19
	if  goto 20
	for  goto 21
	sec  goto 22


state 51
	stmt : for '(' . inicio ';' cond ';' inc ')' stmt end  (16)

	BLTIN  shift 2
	NUMBER  shift 7
	VAR  shift 9
	'('  shift 12
	.  error

	asgn  goto 24
	exp  goto 92
	inicio  goto 93


state 52
	instr : 'e' .  (54)

	.  reduce 54


state 53
	instr : 'n' .  (55)

	.  reduce 55


state 54
	instr : 'o' .  (56)

	.  reduce 56


state 55
	instr : 's' .  (57)

	.  reduce 57


state 56
	instr : 'u' .  (58)

	.  reduce 58


state 57
	instr : 'd' .  (59)

	.  reduce 59


state 58
	instr : '&' .  (60)

	.  reduce 60


state 59
	instr : '%' .  (61)

	.  reduce 61


state 60
	instr : '#' .  (62)

	.  reduce 62


state 61
	instr : '"' .  (63)

	.  reduce 63


state 62
	sec : sec instr .  (52)

	.  reduce 52


state 63
	exp : BLTIN '(' exp . ')'  (31)
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	')'  shift 94
	.  error


state 64
	asgn : VAR '=' exp .  (8)
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	BLTIN  reduce 8
	IF  reduce 8
	ELSE  reduce 8
	WHILE  reduce 8
	FOR  reduce 8
	PRINT  reduce 8
	NUMBER  reduce 8
	'c'  reduce 8
	VAR  reduce 8
	VARCRD  reduce 8
	'\n'  reduce 8
	'('  reduce 8
	';'  reduce 8
	')'  reduce 8
	'{'  reduce 8
	'}'  reduce 8


65: reduce/reduce conflict (reduce 46, reduce 51) on BLTIN
65: reduce/reduce conflict (reduce 46, reduce 51) on IF
65: reduce/reduce conflict (reduce 46, reduce 51) on ELSE
65: reduce/reduce conflict (reduce 46, reduce 51) on WHILE
65: reduce/reduce conflict (reduce 46, reduce 51) on FOR
65: reduce/reduce conflict (reduce 46, reduce 51) on PRINT
65: reduce/reduce conflict (reduce 46, reduce 51) on NUMBER
65: reduce/reduce conflict (reduce 46, reduce 51) on 'c'
65: reduce/reduce conflict (reduce 46, reduce 51) on VAR
65: reduce/reduce conflict (reduce 46, reduce 51) on VARCRD
65: reduce/reduce conflict (reduce 46, reduce 51) on '\n'
65: reduce/reduce conflict (reduce 46, reduce 51) on '('
65: reduce/reduce conflict (reduce 46, reduce 51) on '{'
65: reduce/reduce conflict (reduce 46, reduce 51) on '}'
65: reduce/reduce conflict (reduce 46, reduce 51) on 'e'
65: reduce/reduce conflict (reduce 46, reduce 51) on 'n'
65: reduce/reduce conflict (reduce 46, reduce 51) on 'o'
65: reduce/reduce conflict (reduce 46, reduce 51) on 's'
65: reduce/reduce conflict (reduce 46, reduce 51) on 'u'
65: reduce/reduce conflict (reduce 46, reduce 51) on 'd'
65: reduce/reduce conflict (reduce 46, reduce 51) on '&'
65: reduce/reduce conflict (reduce 46, reduce 51) on '%'
65: reduce/reduce conflict (reduce 46, reduce 51) on '#'
65: reduce/reduce conflict (reduce 46, reduce 51) on '"'
state 65
	binstr : 'c' .  (46)
	sec : 'c' .  (51)

	BLTIN  reduce 46
	IF  reduce 46
	ELSE  reduce 46
	WHILE  reduce 46
	FOR  reduce 46
	PRINT  reduce 46
	NUMBER  reduce 46
	'c'  reduce 46
	VAR  reduce 46
	VARCRD  reduce 46
	'-'  reduce 51
	'+'  reduce 51
	'\n'  reduce 46
	'('  reduce 46
	'{'  reduce 46
	'}'  reduce 46
	'e'  reduce 46
	'n'  reduce 46
	'o'  reduce 46
	's'  reduce 46
	'u'  reduce 46
	'd'  reduce 46
	'&'  reduce 46
	'%'  reduce 46
	'#'  reduce 46
	'"'  reduce 46


state 66
	sec : VARCRD .  (53)

	.  reduce 53


state 67
	binstr : expcoord .  (47)
	expcoord : expcoord . '+' expcoord  (48)
	expcoord : expcoord . '-' expcoord  (49)

	'-'  shift 45
	'+'  shift 46
	BLTIN  reduce 47
	IF  reduce 47
	ELSE  reduce 47
	WHILE  reduce 47
	FOR  reduce 47
	PRINT  reduce 47
	NUMBER  reduce 47
	'c'  reduce 47
	VAR  reduce 47
	VARCRD  reduce 47
	'\n'  reduce 47
	'('  reduce 47
	'{'  reduce 47
	'}'  reduce 47
	'e'  reduce 47
	'n'  reduce 47
	'o'  reduce 47
	's'  reduce 47
	'u'  reduce 47
	'd'  reduce 47
	'&'  reduce 47
	'%'  reduce 47
	'#'  reduce 47
	'"'  reduce 47


state 68
	asigncoord : VARCRD '=' binstr .  (44)
	binstr : binstr . instr  (45)

	'e'  shift 52
	'n'  shift 53
	'o'  shift 54
	's'  shift 55
	'u'  shift 56
	'd'  shift 57
	'&'  shift 58
	'%'  shift 59
	'#'  shift 60
	'"'  shift 61
	BLTIN  reduce 44
	IF  reduce 44
	ELSE  reduce 44
	WHILE  reduce 44
	FOR  reduce 44
	PRINT  reduce 44
	NUMBER  reduce 44
	'c'  reduce 44
	VAR  reduce 44
	VARCRD  reduce 44
	'\n'  reduce 44
	'('  reduce 44
	'{'  reduce 44
	'}'  reduce 44

	instr  goto 95


state 69
	exp : '(' exp ')' .  (37)

	.  reduce 37


state 70
	stmtlist : stmtlist '\n' .  (26)

	.  reduce 26


state 71
	stmt : '{' stmtlist '}' .  (17)

	.  reduce 17


state 72
	stmtlist : stmtlist stmt .  (27)

	.  reduce 27


state 73
	stmt : exp .  (9)
	exp : exp . '+' exp  (32)
	exp : exp . '-' exp  (33)
	exp : exp . '*' exp  (34)
	exp : exp . '/' exp  (35)
	exp : exp . '^' exp  (36)
	exp : exp . EQ exp  (38)
	exp : exp . NEQ exp  (39)
	exp : exp . GT exp  (40)
	exp : exp . GE exp  (41)
	exp : exp . LT exp  (42)
	exp : exp . LE exp  (43)

	EQ  shift 32
	NEQ  shift 33
	GT  shift 34
	GE  shift 35
	LT  shift 36
	LE  shift 37
	'-'  shift 38
	'+'  shift 39
	'*'  shift 40
	'/'  shift 41
	'^'  shift 42
	BLTIN  reduce 9
	IF  reduce 9
	ELSE  reduce 9
	WHILE  reduce 9
	FOR  reduce 9
	PRINT  reduce 9
	NUMBER  reduce 9
	'c'  reduce 9
	VAR  reduce 9
	VARCRD  reduce 9
	'\n'  reduce 9
	'('  reduce 9
	'{'  reduce 9
	'}'  reduce 9


state 74
	stmt : asigncoord .  (11)

	.  reduce 11


state 75
	stmt : expcoord .  (12)
	expcoord : expcoord . '+' expcoord  (48)
	expcoord : expcoord . '-' expcoord  (49)

	'-'  shift 45
	'+'  shift 46
	BLTIN  reduce 12
	IF  reduce 12
	ELSE  reduce 12
	WHILE  reduce 12
	FOR  reduce 12
	PRINT  reduce 12
	NUMBER  reduce 12
	'c'  reduce 12
	VAR  reduce 12
	VARCRD  reduce 12
	'\n'  reduce 12
	'('  reduce 12
	'{'  reduce 12
	'}'  reduce 12

